# KX-AI

./: .env.example  .gitignore  API.md  CONTRIBUTING.md  Dockerfile  EXECUTION_LOG.md  MASTER_AGENTIC_CAPABILITIES_AUDIT.md  MASTER_DEPLOYMENT_GUIDE.md  MASTER_FOUNDER_IDENTITY_PROFILE.md  MASTER_HUMANIZED_EXCELLENCE_STANDARD.md  MASTER_MCP_OMNI_ARCH.md  MASTER_ROOT_DIRECTIVE_KX.md  MASTER_SOVEREIGN_AI_AUDIT.md  MASTER_VISION_JARVIS_PLAN.md  PAPER.md  PHASE_A_STATUS.md  PHASE_A_STEP1_REPORT.md  QUICKSTART.md  README.md  README_EXECUTION.md  SECURITY.md  SettingsModal.tsx  TERMS.md  VSCODE_EXTENSION_PLAN.md  index.html  kx_jarvis_master_ui.html  kx_master_ui.html  kx_sanctuary_os.html  next.config.js  package-lock.json  package.json  package.json.patch  preview_welcome.html  tailwind.config.ts  test_engine.ts  test_video.ts  tsconfig.tsbuildinfo
HF/: Dockerfile  package-lock.json  package.json
HF/api/: server.ts
api/: server.ts  server.ts.patch  server.ts.rej
api/lib/: consortium.ts  hf-publisher.ts  hf-reader.ts  llm_router.ts  metadata.ts  tiers.ts  ultraplinian.ts
api/middleware/: auth.ts  rateLimit.ts
api/routes/: audio.ts  chat.ts  connectors.ts  consortium.ts  dataset.ts  export.ts  feedback.ts  gkp.ts  media.ts  research.ts  tools.ts  ultraplinian.ts
api/types/: express.d.ts
bots/: discord.ts  telegram.ts  whatsapp.ts
desktop/: package.json  tauri.conf.json
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: main.rs
functions/api/: telemetry.ts
gkp/company/: constitution.md  mission.md  overview.md
paper/: paper.tex
src/app/: globals.css  (+2 more)
(+56 files in other folders)
