[package]
name = "kx-advisor-os"
version = "0.4.0"
description = "Sovereign Desktop OS Sanctuary for KX Autonomous AI"
authors = ["Halifa Rabiu Ibrahim <GreenByte>"]
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
